Change history


Master
------
- No changes yet


Version 0.6.0, 2017-11-06
-------------------------
- ILF-10: Update interval reverts to long default interval when close to home
- ILF-8: Use adjustable sleep time based on devices next update request time
- ILF-7: Improve retry mechanism for outdated location fetching
- ILF-4: Use distance based update interval
- ILF-3: Store sensitive apple data in separate file


Version 0.5.0, 2017-11-03
-------------------------
- Change log line to correctly identify program as Locations2Domoticz
- For testing purposes make communicating with Domoticz optional
- Switch to requests package for Domoticz communication
- More robust error handling when communication with Domoticz
- Renamed project to iCloudLocationFetcher
- ILF-1: Make script Domoticz unaware but allow any URL to be called